# fem1d

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/OriginalSrc/: fem1d.f77  fem1d.f95  fem1dOriginal
src/assemble/: CMakeLists.txt  assemble.f90
src/boundary/: CMakeLists.txt  boundary.f90
src/coeffcnt/: CMakeLists.txt  coeffcnt.f90  coeffcnt.f95~
src/constrnt/: CMakeLists.txt  constrnt.f90
src/echodata/: CMakeLists.txt  echodata.f95
src/egnsolvr/: CMakeLists.txt  egnsolvr.f95
src/eqnsolvr/: CMakeLists.txt  eqnsolvr.f95
src/fem1d/: CMakeLists.txt  fem1d.f95
src/fem1d/include/: formats4fem1d.f95
src/include/: common.h  io.h  shp.h  stf1.h  stf2.h
src/jacobi/: CMakeLists.txt  jacobi.f95
src/matrxmlt/: CMakeLists.txt  matrxmlt.f90
src/mesh1d/: CMakeLists.txt  mesh1d.f90
src/postproc/: CMakeLists.txt  postproc.f90
src/reaction/: CMakeLists.txt  reaction.f95
src/shape1d/: CMakeLists.txt  shape1d.f90
src/timforce/: CMakeLists.txt  timforce.f95
src/timstres/: CMakeLists.txt  timstres.f90
src/transfrm/: CMakeLists.txt  transfrm.f90
